# apprentissage-stat

./: README.md
tp2-arbres/: README.md  pyproject.toml  rapport.qmd  requirements.txt
tp2-arbres/graphviz/: digits
tp3-svm/: README.md  pyproject.toml  rapport.qmd  requirements.txt
