[tool.poetry]
name = "tp2-arbres"
version = "0.1.0"
description = ""
authors = ["mle-seach <113145496+mle-seach@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tp2_arbres"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
