[tool.poetry]
name = "tp3-svm"
version = "0.1.0"
description = ""
authors = ["mleseach <113145496+mleseach@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tp3_svm"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
tk = "^0.1.0"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
pandas = "^2.1.1"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
